--- a/package.json
+++ b/package.json
@@ -17,7 +17,9 @@
     "framer-motion": "^11.0.5",
     "nanoid": "^5.0.6",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
+    "react-use": "^17.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.56",
