--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "compilerOptions": {
+    "baseUrl": ".", // This must be specified if "paths" is.
+    "paths": {
+      "src/*": ["./src/*"]
+    } , 
+  
     "target": "ES2020",
     "useDefineForClassFields": true,
     "lib": ["ES2020", "DOM", "DOM.Iterable"],
@@ -21,5 +26,7 @@
     "noFallthroughCasesInSwitch": true
   },
   "include": ["src"],
+  
+  
   "references": [{ "path": "./tsconfig.node.json" }]
 }
